cc_library(
    name = "math",
    srcs = [
        "fib.cc",
    ],
    hdrs = [
        "bignum.h",
        "fib.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "bignum_test",
    srcs = [
        "bignum_test.cc",
    ],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "fib_test",
    srcs = [
        "fib_test.cc",
    ],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_binary(
    name = "fib",
    srcs = ["fib_main.cc"],
    deps = [":math"],
)
