cc_library(
    name = "math",
    srcs = [
        "fib.cc",
    ],
    hdrs = [
        "big_uint.h",
        "fib.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "big_uint_test",
    srcs = [
        "big_uint_test.cc",
    ],
    deps = [
        ":math",
        "//third_party/glog",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "fib_test",
    srcs = [
        "fib_test.cc",
    ],
    deps = [
        ":math",
        "//third_party/gtest",
    ],
)

cc_binary(
    name = "fib",
    srcs = ["fib_main.cc"],
    deps = [":math"],
)

cc_test(
    name = "fib_benchmark",
    srcs = ["fib_benchmark.cc"],
    tags = [
        "external",
        "manual",
    ],
    deps = [
        ":math",
        "//third_party/benchmark",
    ],
)
